# sdl2-cmake-base

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
